refactor: replace rtl mixin with logical properties

--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -86,12 +86,7 @@
 .v-app-bar__append
   display: flex
   flex: 0 1 auto
-
-  @include ltr()
-    margin-left: auto
-
-  @include rtl()
-    margin-right: auto
+  margin-inline-start: auto
 
 .v-app-bar__prepend
   display: flex
