--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -155,11 +155,7 @@
 
   ~ .v-btn
     .v-card-actions &
-      @include ltr()
-        margin-left: $button-card-actions-margin
-
-      @include rtl()
-        margin-right: $button-card-actions-margin
+      margin-inline-start: $button-card-actions-margin
 
 // VBanner
 .v-btn
