--- a/packages/vuetify/src/components/VDivider/VDivider.sass
+++ b/packages/vuetify/src/components/VDivider/VDivider.sass
@@ -24,12 +24,7 @@
   &--inset
     &:not(.v-divider--vertical)
       max-width: $divider-inset-max-width
-
-      @include ltr()
-        margin-left: $divider-inset-margin
-
-      @include rtl()
-        margin-right: $divider-inset-margin
+      margin-inline-start: $divider-inset-margin
 
     &.v-divider--vertical
       margin-bottom: $divider-vertical-inset-margin-bottom
