--- a/packages/vuetify/src/components/VOverlay/VOverlay.sass
+++ b/packages/vuetify/src/components/VOverlay/VOverlay.sass
@@ -22,12 +22,7 @@
   right: 0
   top: 0
   z-index: $overlay-z-index
-
-  @include ltr()
-    padding-right: $overlay-padding-x
-
-  @include rtl()
-    padding-left: $overlay-padding-x
+  padding-inline-end: $overlay-padding-x
 
 // Element
 .v-overlay__content
