--- a/packages/vuetify/src/components/VResponsive/VResponsive.sass
+++ b/packages/vuetify/src/components/VResponsive/VResponsive.sass
@@ -12,11 +12,7 @@
   max-width: 100%
 
 .v-responsive__sizer ~ .v-responsive__content
-  +ltr()
-    margin-left: -100%
-
-  +rtl()
-    margin-right: -100%
+  margin-inline-start: -100%
 
 .v-responsive__sizer
   flex: 1 0 0px
