--- a/packages/vuetify/src/components/VSystemBar/VSystemBar.sass
+++ b/packages/vuetify/src/components/VSystemBar/VSystemBar.sass
@@ -22,11 +22,7 @@
   +position($system-bar-positions)
   +rounded($system-bar-border-radius)
 
-  +ltr()
-    text-align: right
-
-  +rtl()
-    text-align: left
+  text-align: end
 
   &--lights-out
     background: $system-bar-lights-out-background
