fix(VNavigationDrawer): add missing floating prop
fixes #13875

--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -24,6 +24,9 @@
   &--absolute
     position: absolute
 
+  &--floating
+    border-color: transparent
+
   &--rounded
     @include rounded($navigation-drawer-rounded-border-radius)
 
