--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -25,8 +25,10 @@
   $root: &
 
   align-self: center
+  height: $list-item-avatar-size
   transition: inherit
   transition-property: height, width
+  width: $list-item-avatar-size
 
   &--start
     margin-inline-end: $list-item-avatar-margin-end
