fix(VList/VListItem): add missing rounded prop support

--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -18,6 +18,9 @@
     > [class*='v-list-']
       opacity: $list-disabled-opacity
 
+  &--rounded
+    @include rounded($list-rounded-border-radius)
+
   &--subheader
     padding-top: $list-subheader-padding-top
 
