feat(variables.scss): set font-size-root to 1rem

--- a/packages/vuetify/src/styles/settings/_variables.scss
+++ b/packages/vuetify/src/styles/settings/_variables.scss
@@ -3,7 +3,7 @@
 $color-pack: true !default;
 
 $body-font-family: 'Roboto', sans-serif !default;
-$font-size-root: 16px !default;
+$font-size-root: 1rem !default;
 $line-height-root: 1.5 !default;
 $border-color-root: rgba(var(--v-border-color), var(--v-border-opacity)) !default;
 $border-radius-root: 4px !default;
