fix(VIcon): size with ems instead of px (#13978)
Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -37,6 +37,7 @@
     border-radius: $button-icon-border-radius
     min-width: 0
     padding: 0
+    font-size: $button-icon-font-size
 
     @at-root &
       +button-density(('width', 'height'), $button-icon-density)
