--- a/packages/vuetify/src/components/VIcon/_variables.scss
+++ b/packages/vuetify/src/components/VIcon/_variables.scss
@@ -9,17 +9,18 @@ $icon-letter-spacing: normal !default;
 $icon-line-height: 1 !default;
 $icon-margin-end: map-get($grid-gutters, 'md') !default;
 $icon-margin-start: map-get($grid-gutters, 'md') !default;
+$icon-size: 1em !default;
 $icon-text-indent: 0 !default;
 $icon-vertical-align: middle !default;
 
 $icon-sizes: () !default;
 $icon-sizes: map-deep-merge(
   (
-    'x-small': 16px,
-    'small': 20px,
-    'default': 24px,
-    'large': 28px,
-    'x-large': 32px,
+    'x-small': 1em,
+    'small': 1.25em,
+    'default': 1.5em,
+    'large': 1.75em,
+    'x-large': 2em,
   ),
   $icon-sizes
 );
