feat(VMenu): port to v3 (#14030)
fixes #3303
fixes #5310
fixes #9753
fixes #10578
fixes #11818
fixes #12110

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -166,10 +166,6 @@
   opacity: 0
   transition: opacity 0.2s ease-in-out
 
-// VDialog
-.v-card
-  .v-dialog .v-overlay__content > &
-    border-radius: inherit
-    overflow: hidden
-
-    @include elevation($card-dialog-elevation)
+  + .v-card-media
+    border-top-left-radius: inherit
+    border-top-right-radius: inherit
