--- a/packages/vuetify/src/components/VMenu/VMenu.sass
+++ b/packages/vuetify/src/components/VMenu/VMenu.sass
@@ -1,70 +1,22 @@
-@import './_variables.scss'
+@import './index'
 
 .v-menu
-  display: none
+  z-index: $menu-z-index
 
-  &--attached
-    display: inline
+  .v-overlay__content
+    display: flex
+    flex-direction: column
+    @include rounded($menu-content-border-radius)
 
-  &__content
-    position: absolute
-    display: inline-block
-    max-width: 80%
-    overflow-y: auto
-    overflow-x: hidden
-    contain: content
-    +elevation($menu-content-elevation)
-    +radius($menu-content-border-radius)
+    > .v-card,
+    > .v-sheet
+      background: rgb(var(--v-theme-surface))
+      border-radius: inherit
+      overflow: auto
+      height: 100%
 
-    &--active
-      pointer-events: none
-
-    &--auto
-      .v-list-item
-        transition-property: transform, opacity
-        transition-duration: .3s
-        transition-timing-function: map-get($transition, 'fast-in-fast-out')
-
-    &--fixed
-      position: fixed
-
-    & > .card
-      contain: content
-      backface-visibility: hidden
-
-  > .v-menu__content
-    max-width: none
-
-  &-transition
-    &-enter
-      .v-list-item
-        min-width: 0
-        pointer-events: none
-    &-enter-to
-      .v-list-item
-        transition-delay: .1s
-
-    &-leave-active,
-    &-leave-to
-      pointer-events: none
-
-    &-enter,
-    &-leave-to
-      opacity: 0
-
-    &-enter-active,
-    &-leave-active
-      transition: all .3s map-get($transition, 'fast-in-fast-out')
-
-.v-menu-transition-enter
-  &.v-menu__content--auto
-    transition: none !important
-
-    .v-list-item
-      opacity: 0
-      transform: translateY(-15px)
-
-    .v-list-item--active
-      opacity: 1
-      transform: none !important
-      pointer-events: auto
+      &::before
+        border-radius: inherit
+        z-index: -1
+        @include absolute
+        @include elevation($menu-elevation)
