--- a/packages/vuetify/src/components/VProgressLinear/_variables.scss
+++ b/packages/vuetify/src/components/VProgressLinear/_variables.scss
@@ -1,7 +1,12 @@
+// Defaults
 @import '../../styles/styles.sass';
 
+$progress-linear-background: currentColor !default;
+$progress-linear-background-background: $progress-linear-background !default;
+$progress-linear-background-opacity: var(--v-border-opacity) !default;
 $progress-linear-border-radius: $border-radius-root !default;
 $progress-linear-stream-opacity: 0.3 !default;
+$progress-linear-stripe-background-size: 40px 40px !default;
 $progress-linear-stream-border-width: 4px !default;
 $progress-linear-stripe-gradient: linear-gradient(
   135deg,
@@ -13,4 +18,8 @@ $progress-linear-stripe-gradient: linear-gradient(
   transparent 0,
   transparent
 ) !default;
-$progress-linear-stripe-background-size: 40px 40px !default;
+$progress-linear-indeteminate-animation-duration: 2.2s !default;
+$progress-linear-stream-animation: stream .25s infinite linear !default;
+$progress-linear-striped-animation: progress-linear-stripes 1s infinite linear !default;
+$progress-linear-striped-size: var(--v-progress-linear-height) !default;
+$progress-linear-transition: .2s $standard-easing !default;
