feat(VTooltip): update for v3 (#14052)
Fixes #7529
Fixes #8213
Resolves #9878
Fixes #12552

--- a/packages/vuetify/src/styles/generic/_transitions.scss
+++ b/packages/vuetify/src/styles/generic/_transitions.scss
@@ -49,6 +49,7 @@
   &-enter-active,
   &-leave-active {
     transition-property: transform, opacity;
+    pointer-events: none;
   }
 
   &-enter-from, &-leave-to {
