--- a/packages/vuetify/src/components/VTooltip/VTooltip.sass
+++ b/packages/vuetify/src/components/VTooltip/VTooltip.sass
@@ -1,33 +1,23 @@
 @import './_variables.scss'
 
 .v-tooltip
-  display: none
-
-  &--attached
-    display: inline
-
-  &__content
+  .v-overlay__content
     background: $tooltip-background-color
     color: $tooltip-text-color
     border-radius: $tooltip-border-radius
     font-size: $tooltip-font-size
-    line-height: round($tooltip-font-size * 1.6)
+    line-height: $tooltip-line-height
     display: inline-block
     padding: $tooltip-padding
-    position: absolute
     text-transform: initial
     width: auto
     opacity: 1
     pointer-events: none
 
-    &--fixed
-      position: fixed
-
-    &[class*="-active"]
-      transition-timing-function: $tooltip-transition-timing-function
-
     &[class*="enter-active"]
+      transition-timing-function: $decelerated-easing
       transition-duration: $tooltip-transition-enter-duration
 
     &[class*="leave-active"]
+      transition-timing-function: $accelerated-easing
       transition-duration: $tooltip-transition-leave-duration
